--- a/microcitylibrary.html
+++ b/microcitylibrary.html
@@ -80,15 +80,51 @@
           The site of this project was at Railway Square in Sydney, neither a railway nor a square. Using the site and the knowledge of the City of Sydney public transport infrastructure developments, we laid out a grid to create a field condition for our library. This field condition would be warped and manipulated by thoroughfare and public transportation routes, but retain a consistent gridded language to allow it to be read as a whole. 
         </p>
 
-        <iframe src="https://drive.google.com/file/d/0BzYOQEBbOMzkczQ1MjRBOU1rdWc/preview" width="480" height="360" frameborder="0"></iframe>
+        <iframe src="https://drive.google.com/file/d/0BzYOQEBbOMzkczQ1MjRBOU1rdWc/preview" class="h-100" frameborder="0"></iframe>
       
       </div>
+
     </article>
 
     </div>
 
-    <div class="center">
-      
+    <div class="w-100 center">
+      <img src="resources/library_graphicnovel.jpg" class="h-100" />
+
+      <main class="cf w-100">
+
+        <div class="fl w-100 w-50-ns">
+          <div class="aspect-ratio aspect-ratio--6x4">
+            <img style="background-image:url(resources/library_1.jpg);"
+            class="db bg-center cover aspect-ratio--object" />
+          </div>
+        </div>
+
+        <div class="fl w-100 w-50-ns">
+          <div class="aspect-ratio aspect-ratio--6x4">
+            <img style="background-image:url(resources/library_3.jpg);"
+            class="db bg-center cover aspect-ratio--object" />
+          </div>
+        </div>
+
+        <div class="fl w-100 w-50-ns">
+          <div class="aspect-ratio aspect-ratio--6x4">
+            <img style="background-image:url(resources/library_2.jpg);"
+            class="db bg-center cover aspect-ratio--object" />
+          </div>
+        </div>
+
+        <div class="fl w-100 w-50-ns">
+          <div class="aspect-ratio aspect-ratio--6x4">
+            <img style="background-image:url(resources/library_4.jpg);"
+            class="db bg-center cover aspect-ratio--object" />
+          </div>
+        </div>
+
+      </main>
+
+      <img src="resources/library_axo.jpg" class="w-100 pa3" />
+
     </div>
 
     <footer class="pv4 ph3 ph5-ns tr bg-dark-gray">
