--- a/microcitylibrary.html
+++ b/microcitylibrary.html
@@ -77,7 +77,9 @@
 
         <p class="f5 fw6 ttu tracked fs-normal pt3">Model</p>
         <p class="f5 lh-copy measure">
-          The site of this project was at Railway Square in Sydney, neither a railway nor a square. Using the site and the knowledge of the City of Sydney public transport infrastructure developments, we laid out a grid to create a field condition for our library. This field condition would be warped and manipulated by thoroughfare and public transportation routes, but retain a consistent gridded language to allow it to be read as a whole. 
+          Our final project model was not place on site nor was it the actual library, but rather, it was a representational model that shared moments from within our library to create character within each space. Just over a metre long, this diagrammatic model, while not a direct representation of our designed library, accentuated the modularity and protocol for growth highlighting new permutations and combinations.<br><br>
+          It was a precisely crafted model at 1:100 scale, featuring laser cut elements, hand-crafted elements and an electroluminescent (EL) panel to provide an interior understanding of the library and its programmatic relations.<br><br>
+          Part of the reason it was a section model was so that we had a flat edge to create a panning video realising the experience of passing through the library.
         </p>
 
         <iframe src="https://drive.google.com/file/d/0BzYOQEBbOMzkczQ1MjRBOU1rdWc/preview" class="h-100" frameborder="0"></iframe>
