--- a/microcitylibrary.html
+++ b/microcitylibrary.html
@@ -91,7 +91,7 @@
     </div>
 
     <div class="w-100 center">
-      <img src="resources/library_graphicnovel.jpg" class="h-100" />
+      <img src="resources/library_graphicnovel.jpg" class="w-100" />
 
       <main class="cf w-100">
 
