--- a/exchange.html
+++ b/exchange.html
@@ -36,7 +36,7 @@
     <article class="cf ph3 ph5-ns pv5 sans-serif">
       <header class="fn fl-ns w-50-ns pr4-ns">
         <h1 class="f2 lh-title fw9 mb3 mt0 pt3 bt bw2 b--light-pink">
-          Material Exploration, Conceptual Architecture & Boathouses
+          Material Exploration & Conceptual Architecture
         </h1>
         <h2 class="f3 mid-gray lh-title">
           Varun Mathew
@@ -51,7 +51,7 @@
           The clay nuts can be combined using a binder, such as cement, to create building blocks or can be used raw for its water-filtering properties or as a foundation filler.
         </p>
 
-        <iframe src="..." width="480" height="360" frameborder="0"></iframe>
+        <iframe src="..." class="h-100" frameborder="0"></iframe>
 
         <p class="f5 fw6 ttu tracked fs-normal pt3">Conceptual Project</p>
         <p class="f5 lh-copy measure">
