--- a/exchange.html
+++ b/exchange.html
@@ -51,7 +51,7 @@
           The clay nuts can be combined using a binder, such as cement, to create building blocks or can be used raw for its water-filtering properties or as a foundation filler.
         </p>
 
-        <iframe src="..." class="h-100" frameborder="0"></iframe>
+        <iframe src="..." class="w-100" frameborder="0"></iframe>
 
         <p class="f5 fw6 ttu tracked fs-normal pt3">Conceptual Project</p>
         <p class="f5 lh-copy measure">
