--- a/microcitylibrary.html
+++ b/microcitylibrary.html
@@ -93,7 +93,7 @@
     <div class="w-100 center">
       <img src="resources/library_graphicnovel.jpg" class="w-100" />
 
-      <main class="cf w-100">
+      <main class="cf mw-100">
 
         <div class="fl w-100 w-50-ns">
           <div class="aspect-ratio aspect-ratio--6x4">
@@ -125,7 +125,7 @@
 
       </main>
 
-      <img src="resources/library_axo.jpg" class="w-100 pa3" />
+      <img src="resources/library_axo.jpg" class="w-100 pt3 pb3" />
 
     </div>
 
