--- a/microcitylibrary.html
+++ b/microcitylibrary.html
@@ -90,10 +90,10 @@
 
     </div>
 
-    <div class="w-100 center">
+    <div class="mw-100 center">
       <img src="resources/library_graphicnovel.jpg" class="w-100" />
 
-      <main class="cf mw-100">
+      <main class="cf w-100">
 
         <div class="fl w-100 w-50-ns">
           <div class="aspect-ratio aspect-ratio--6x4">
