--- a/finwit.html
+++ b/finwit.html
@@ -15,7 +15,7 @@
 <body>
 
   <nav class="dt mw8 center w-100 border-box ph3 ph4-ns bb bw2 b--green">
-    <a class="dtc v-mid mid-gray link hover-orange w-25 w-40-ns" href="home.html" title="Home">
+    <a class="dtc v-mid mid-gray link hover-orange w-25 w-40-ns" href="index.html" title="Home">
       <!-- <img src="logo.jpg" class="dib w2 h2 br-100" alt="Varun Mathew"> -->
       <p class="f4 fw9 sans-serif tl"><!-- &#x221a; -->
         v<span class="dib-l dib-m dn">arun</span><span class="dib">.</span>mat<span class="dib-l dib-m dn">hew</span>
